--- a/index.html
+++ b/index.html
@@ -192,16 +192,16 @@
                 alt=""
               />
               <h2>Sample 2</h2>
-              <div class="rating">
-                <i class="bx bxl-github">github</i>
-                <br />
-                <a
-                  href="file:///C:/Mini-Project/KodeResto-master/index.html"
-                  target="_blank"
-                  >KodeResto</a
-                >
-              </div>
+            <div class="rating">
+              <i class="bx bxl-github">github</i>
+              <br />
+              <a
+                href=https://samplekoderesto2.netlify.app/
+                target="_blank"
+                >KodeResto</a
+              >
             </div>
+          </div>
           </div>
         </div>
       </div>
